<resources>
    <string name="app_name">RecommenderPrototype</string>
    <string name="action_settings">Settings</string>
    <string name="default_string">TextView</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <!-- Categories -->
    <string-array name="categories">
        <item>Popular</item>
        <item>Suggestions</item>
        <item>Nutrition</item>
        <item>Rice</item>
        <item>Noodle</item>
        <item>Dumpling</item>
        <item>Fried Bread</item>
        <item>Soup</item>
        <item>Bread</item>
        <item>Other</item>
    </string-array>
    /* Categories Message */
    <string name="suggestions_login_to_view">Please login to view!</string>
    <string name="suggestions_close_app_to_refresh">Please close and reopen app to refresh!</string>

    <!-- Food Details Fragment -->
    <string name="food_details_nutrition">Nutrition Information</string>
    <string name="food_details_main_ingredients">Main Ingredients</string>
    <string name="food_details_food_type">Food Type</string>
    <string name="food_details_calorie">Calorie</string>
    <string name="food_details_starch">Starch</string>
    <string name="food_details_protein">Protein</string>
    <string name="food_details_fat">Fat</string>
    <string name="food_details_calorie_with_unit">Calorie kcal</string>
    <string name="food_details_starch_with_unit">Starch g</string>
    <string name="food_details_protein_with_unit">Protein g</string>
    <string name="food_details_fat_with_unit">Fat g</string>
    /* Food Details Message */
    <string name="food_details_bookmarked">Bookmarked!</string>
    <string name="food_details_remove_bookmark">Bookmark Removed!</string>
    <string name="food_details_login_to_bookmark">Please Login To Bookmark!</string>
    <string name="food_details_login_to_edit">Please Login To Edit!</string>
    <string name="food_details_edit_title">Edit Nutrition Info</string>
    <string name="food_details_edit_description">&#8226; Anyone is free to edit as long as the user can guarantee that his/her information is accurate to a certain degree.
        \n&#8226; The info here is used to display　food in the "Nutrition" category.
        \n&#8226; Please don\'t abuse and thanks for providing the info. </string>
    <string name="food_details_image_upload_success">Upload Success!</string>
    <string name="food_details_image_upload_failed">Upload Failed! Please Try Again!</string>
    <string name="food_details_image_upload_uploading">Uploading…Please Wait!</string>
    <string name="food_details_image_upload_still_uploading">Still Uploading…</string>


    <!-- Restaurant Details Fragment -->
    <string name="restaurant_details_restaurant_menu">Restaurant Menu</string>

    <!-- Profile Fragment-->
    <string name="profile_settings">Profile Settings</string>
    <string name="profile_bookmark">Bookmark</string>
    <string name="profile_history">History</string>
    <string name="profile_feedback">Feedback</string>
    <string name="profile_logout">Logout</string>
    /* Profile Fragment Message*/
    <string name="profile_loggedout_message">Logged Out!</string>
    <string name="profile_feedback_and_suggestions">Feedback and Suggestions</string>
    <string name="profile_feedback_message">Please tell us the glitches/bugs you found or some suggestions to improve the app.</string>
    <string name="profile_feedback_submitted">Submitted!</string>
    <string name="profile_feedback_cancel">Cancel</string>
    <string name="profile_signed_in_as">Signed In As</string>

    <!-- Profile Settings Fragment -->
    <string name="profile_settings_gender">Gender</string>
    <string name="profile_settings_gender_male">Male</string>
    <string name="profile_settings_gender_female">Female</string>
    <string name="profile_settings_age">Age</string>
    <string name="profile_settings_height">Height (cm)</string>
    <string name="profile_settings_weight">Weight (kg)</string>
    <string name="profile_settings_cant_eat">Things You Can\'t Eat</string>
    <string name="profile_settings_activity">Activity</string>
    <string name="profile_settings_prefer">Set Prefer</string>
    <string name="profile_settings_prefer_not">Set Prefer Not</string>
    <string name="profile_settings_submit">Submit</string>
    <string name="profile_settings_done">Done</string>
    <string name="profile_settings_nothing_clear">Nothing/Clear</string>
    <string name="profile_settings_nothing">Nothing</string>
    <string-array name="profile_setting_activity_items">
        <item>Rare</item>
        <item>Few</item>
        <item>Moderate</item>
        <item>Frequent</item>
        <item>Extreme</item>
    </string-array>
    <string-array name="profile_settings_preference_items">
        <item>Chicken</item>
        <item>Pork</item>
        <item>Beef</item>
        <item>Mutton</item>
        <item>Fish</item>
        <item>Seafood</item>
        <item>Egg</item>
        <item>Vege</item>
        <item>Tofu</item>
    </string-array>
    /* Profile Settings Fragment Hints */
    <string name="profile_settings_gender_hint">Male/Female</string>
    <string name="profile_settings_age_hint">Enter age</string>
    <string name="profile_settings_height_hint">Enter height in cm</string>
    <string name="profile_settings_weight_hint">Enter weight in kg</string>
    <string name="profile_settings_cant_eat_hint">Allergy/Religious restrictions</string>
    <string name="profile_settings_activity_hint">How active is your lifestyle?</string>
    <string name="profile_settings_prefer_hint">Things you like?</string>
    <string name="profile_settings_prefer_not_hint">Things you don\'t like?</string>
    /* Profile Settings Fragment Message */
    <string name="profile_settings_conflict_warning_message">Data conflict for preference settings!</string>
    <string name="profile_settings_submitted_message">Profile Settings Submitted!</string>
    <string name="profile_settings_set_preferred_first">Please Set Preferred Items First!</string>

    <!-- Search Fragment -->
    <string name="search_hint">Search here</string>
</resources>
