<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3F0F6"
    android:clickable="true">

    <ImageView
        android:id="@+id/userPhotoImageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar_sample"
        />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="Username"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="@id/userPhotoImageView"
        app:layout_constraintStart_toEndOf="@id/userPhotoImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rectangle"
        android:text="@string/profile_settings"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPhotoImageView" />

    <Button
        android:id="@+id/bookmarkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rectangle"
        android:text="@string/profile_bookmark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileSettingsButton" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rectangle"
        android:text="@string/profile_history"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookmarkButton" />

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rectangle"
        android:text="@string/profile_feedback"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/historyButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:background="#F47248"
        android:text="@string/profile_logout"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>