<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calorieTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/food_details_calorie"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/calorieColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/calorieEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="24dp"
            android:ems="5"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/starchTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/food_details_starch"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/starchColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text=":"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/starchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="24dp"
            android:ems="5"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/proteinTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/food_details_protein"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/proteinColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/proteinEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="24dp"
            android:ems="5"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fatTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/food_details_fat"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fatColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fatEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="24dp"
            android:ems="5"
            android:inputType="number" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>