<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1FAFB"
    android:clickable="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/detailsFoodCard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detailsFoodImage"
                android:layout_width="128dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fried_chicken" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detailsFoodImage"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/detailsFoodName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="Name"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailsFoodPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="Price"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailsFoodName" />

                <TextView
                    android:id="@+id/detailsFoodRestaurant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_assignment_soft_blue_24dp"
                    android:drawablePadding="4dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="Restaurant"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailsFoodPrice" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/detailsFoodCard2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsFoodCard1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/nutritionInformationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/ic_edit_grey_24dp"
                android:drawablePadding="4dp"
                android:text="@string/food_details_nutrition"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailsCalorieTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/food_details_calorie_with_unit"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nutritionInformationTextView" />

            <TextView
                android:id="@+id/calorieColon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text=":"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/detailsCalorieTextView"
                app:layout_constraintTop_toTopOf="@id/detailsCalorieTextView" />

            <TextView
                android:id="@+id/calorieValTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/calorieColon"
                app:layout_constraintTop_toTopOf="@id/detailsCalorieTextView" />

            <TextView
                android:id="@+id/detailsStarchTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_details_starch_with_unit"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/detailsCalorieTextView"
                app:layout_constraintTop_toBottomOf="@id/detailsCalorieTextView" />

            <TextView
                android:id="@+id/starchColon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/calorieColon"
                app:layout_constraintTop_toTopOf="@id/detailsStarchTextView" />

            <TextView
                android:id="@+id/starchValTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/calorieValTextView"
                app:layout_constraintTop_toBottomOf="@id/calorieValTextView" />

            <TextView
                android:id="@+id/detailsProteinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_details_protein_with_unit"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/detailsStarchTextView"
                app:layout_constraintTop_toBottomOf="@id/detailsStarchTextView" />

            <TextView
                android:id="@+id/proteinColon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/calorieColon"
                app:layout_constraintTop_toTopOf="@id/detailsProteinTextView" />

            <TextView
                android:id="@+id/proteinValTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/starchValTextView"
                app:layout_constraintTop_toBottomOf="@id/starchValTextView" />

            <TextView
                android:id="@+id/detailsFatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_details_fat_with_unit"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/detailsProteinTextView"
                app:layout_constraintTop_toBottomOf="@id/detailsProteinTextView" />

            <TextView
                android:id="@+id/fatColon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/calorieColon"
                app:layout_constraintTop_toTopOf="@id/detailsFatTextView" />

            <TextView
                android:id="@+id/fatValTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/proteinValTextView"
                app:layout_constraintTop_toBottomOf="@id/proteinValTextView" />

            <TextView
                android:id="@+id/mainIngredientsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/food_details_main_ingredients"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailsFatTextView" />

            <ListView
                android:id="@+id/mainIngredientsListView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/border_ui"
                android:divider="#cccccc"
                android:dividerHeight="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainIngredientsTextView" />

            <TextView
                android:id="@+id/foodTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/food_details_food_type"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/detailsFatTextView"
                app:layout_constraintTop_toBottomOf="@id/mainIngredientsListView" />

            <TextView
                android:id="@+id/foodTypeValTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/foodTypeTextView"
                app:layout_constraintTop_toBottomOf="@id/foodTypeTextView" />

            <ToggleButton
                android:id="@+id/bookmarkButton"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/foodTypeTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>